--- a/product/index.html
+++ b/product/index.html
@@ -92,7 +92,6 @@ a[href^="https://www.highcpmrevenuenetwork.com/"], .bb-md-adv7, #top-ads-contain
 
 
 
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
     <!-- Favicons -->
@@ -179,6 +178,11 @@ a[href^="https://www.highcpmrevenuenetwork.com/"], .bb-md-adv7, #top-ads-contain
         }
     </style>
 
+    <script src="https://use.fontawesome.com/7c0348939e.js"></script>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
+
 
 </head>
 <body>
@@ -231,12 +235,182 @@ a[href^="https://www.highcpmrevenuenetwork.com/"], .bb-md-adv7, #top-ads-contain
 
 <main>
     <div class="container py-4">
-        <header class="pb-3 mb-4 border-bottom">
-            <a href="https://getbootstrap.com/" class="d-flex align-items-center text-body-emphasis text-decoration-none">
+        <header class="pb-3 mb-5 border-bottom">
+
+            <div class="text-center">
+            <a href="https://getbootstrap.com/"
+               class=" text-body-emphasis text-decoration-none text-center"
+                style="font-family: Georgia, serif; font-size: 2.25rem;">
                 <svg xmlns="http://www.w3.org/2000/svg" width="40" height="32" class="me-2" viewBox="0 0 118 94" role="img"><title>Bootstrap</title><path fill-rule="evenodd" clip-rule="evenodd" d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z" fill="currentColor"></path></svg>
-                <span class="fs-4">Jumbotron example</span>
+                <span class="fs-2">BRAND NAME</span>
             </a>
+            </div>
         </header>
+
+
+        <div class="row align-items-md-stretch">
+            <div class="col-md-6">
+                <div class="mx-5 mb-5 mt-3">
+                    <img src="/imgs/red-handbag.jpg" class="img-fluid shadow" alt="...">
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="text-center d-flex justify-content-center " >
+                    <div class="border border-success rounded p-3 m-2">
+                        <p class="fs-1 text-success">
+                            <i class="bi bi-check-circle"></i>
+                        </p>
+                        <h5 class="">Authenticity</h5>
+                    </div>
+                </div>
+
+                <h1 class="pt-3 mb-3">Red Handbag Model 2023</h1>
+                <h5>Description</h5>
+                <p>
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
+                    by injected humour, or randomised words which don't look even slightly believable.
+                    If you are going to use a passage of Lorem Ipsum, you need to be sure there
+                    isn't anything embarrassing hidden in the middle of text.
+
+
+                </p>
+            </div>
+        </div>
+
+
+
+        <div class="row align-items-md-stretch mb-5">
+            <div class="col-lg-8 col-md-10 mx-auto">
+                <div class="pt-5 pb-3 text-center">
+                    <h2 class="mb-3">
+                        <i class="bi bi-shield-check"></i> FAS Details
+                    </h2>
+                    <p class="lead">Below is an example form built entirely with Bootstrap’s form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.</p>
+                </div>
+                <dl class="row">
+                    <dt class="col-sm-3">Product UUID</dt>
+                    <dd class="col-sm-9">93947c6b-651c-4306-9dc7-4431c1178f42</dd>
+                </dl>
+                <dl class="row">
+                    <dt class="col-sm-3">Number of page views</dt>
+                    <dd class="col-sm-9">
+                        <p class="h5">
+                            8 views <small class="text-muted px-3">last 3 days ago</small>
+                        </p>
+                    </dd>
+                </dl>
+
+                <dl class="row">
+                    <dt class="col-sm-3">Last Viewers</dt>
+                    <dd class="col-sm-9">
+                        <div class="list-group">
+                            <a href="#" class="list-group-item list-group-item-action active" aria-current="true">
+                                <div class="d-flex w-100 justify-content-between">
+                                    <h5 class="mb-1">
+                                        <span class="text px-2">
+                                            <i class="bi bi-person-check"></i></span>
+                                        Viewer ID <span class="px-4">db47125e-...</span>
+                                    </h5>
+                                    <small>now</small>
+                                </div>
+                                <p class="mb-1">2023 Jun 22, 11:59 from 🇫🇮  Finland, Helsinki </p>
+                                <small class="text-muted">db47125e-3ad5-4274-9393-62ce5003d6e5</small>
+                            </a>
+                            <a href="#" class="list-group-item list-group-item-action">
+                                <div class="d-flex w-100 justify-content-between">
+                                    <h5 class="mb-1">
+                                        <span class="text-success px-2">
+                                            <i class="bi bi-person-check"></i></span>
+                                        Viewer ID <span class="px-4">ff54b79e-...</span>
+                                    </h5>
+                                    <small>month ago</small>
+                                </div>
+                                <p class="mb-1">2023 May 31, 23:05 from 🇸🇪  Sweden, Stocholm </p>
+                                <small class="text-muted">ff54b79e-0535-46da-b22b-7c3ffe26e602</small>
+                            </a>
+                            <a href="#" class="list-group-item list-group-item-action">
+                                <div class="d-flex w-100 justify-content-between">
+                                    <span class="mb-1">
+                                        <span class="h5">
+                                            <span class="text-success px-2">
+                                                <i class="bi bi-person-check"></i>
+                                            </span>
+                                            Viewer ID
+                                            <span class="px-4">8e7cce90-...</span>
+                                        </span>
+
+                                        <span class="badge rounded-pill bg-primary small ">2 views</span>
+
+                                    </span>
+                                    <small>2 months ago</small>
+                                </div>
+                                <p class="mb-1">2023 April 4, 01:18 from 🇫🇷  France, Paris </p>
+                                <small class="text-muted">8e7cce90-b1f2-460d-9f8f-f35dd5048454</small>
+                            </a>
+                            <a href="#" class="list-group-item list-group-item-action">
+                                <div class="d-flex w-100 justify-content-between">
+                                    <h5 class="mb-1">
+                                        <span class="text-danger px-2">
+                                            <i class="bi bi-person-check"></i></span>
+                                        Viewer ID <span class="px-4">d07021cb-...</span>
+                                    </h5>
+                                    <small>1 year ago</small>
+                                </div>
+                                <p class="mb-1">2022 Febrary 24, 04:43 from 🇨🇫  Central African Republic, Bangui </p>
+                                <small class="text-muted">d07021cb-61f3-489f-80c8-a52f7d72d69d</small>
+                            </a>
+                            <a href="#" class="list-group-item list-group-item-action">
+                                <div class="d-flex w-100 justify-content-between">
+                                    <h5 class="mb-1">
+                                        <span class="text-warning px-2">
+                                            <i class="bi bi-person-exclamation"></i></span>
+                                        Viewer ID <span class="px-4">538a3c29-...</span>
+                                    </h5>
+                                    <small>1 year ago</small>
+                                </div>
+                                <p class="mb-1">2022 Febrary 24, 03:41 from 🇷🇺  Russia, Moscow Region, Barvicha </p>
+                                <small class="text-muted">538a3c29-ddd4-4b26-bc90-81e62de18c07</small>
+                            </a>
+                            <a href="#" class="list-group-item list-group-item-action">
+                                <div class="d-flex w-100 justify-content-between">
+                                    <span class="mb-1">
+                                        <span class="h5">
+                                            <span class="text-success px-2">
+                                                <i class="bi bi-person-check"></i>
+                                            </span>
+                                            Viewer ID
+                                            <span class="px-4">8e7cce90-...</span>
+                                        </span>
+
+                                        <span class="badge rounded-pill bg-primary small ">2 views</span>
+
+                                    </span>
+                                    <small>3 years ago</small>
+                                </div>
+                                <p class="mb-1">2020 April 4, 01:18 from 🇫🇷  France, Paris </p>
+                                <small class="text-muted">8e7cce90-b1f2-460d-9f8f-f35dd5048454</small>
+                            </a>
+                        </div>
+                    </dd>
+                </dl>
+
+
+
+
+
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
 
         <div class="p-5 mb-4 bg-body-tertiary rounded-3">
             <div class="container-fluid py-5">
